2005-09-24  Osmo Salomaa  otsaloma@cc.hut.fi

	* data:
	  data/glade:
	  data/glade/encoding-dialog.glade:
	  data/glade/insertsub-dialog.glade:
	  data/glade/language-dialog.glade:
	  data/glade/multiclose-dialog.glade:
	  data/glade/prefs-dialog.glade:
	  data/glade/spellcheck-dialog.glade:
	  data/icons:
	  data/icons/gaupol.png:
	  data/ui:
	  data/ui/menubar.xml:
	  data/ui/toolbar.xml:
	  data/ui/treeview.xml:
	  doc:
	  doc/releasing.txt:
	  lib:
	  lib/gaupol:
	  lib/gaupol/__init__.py:
	  po:
	  po/ChangeLog:
	  po/fi.po:
	  test:
	  test/pyenchant:
	  New files added from trunk with varying amount of fixes.

2005-09-24  Osmo Salomaa  otsaloma@cc.hut.fi

	* INSTALL:
	  NEWS:
	  README:
	  README.translators:
	  TODO:
	  gaupol:
	  setup.py:
	  trantool:
	  Minor fixes.

2005-09-24  Osmo Salomaa  otsaloma@cc.hut.fi

	START OF CODEBASE REDESIGN AND CODE REWRITE.

	* COPYING:
	  ChangeLog:
	  INSTALL:
	  MANIFEST.in:
	  NEWS:
	  README:
	  README.translators:
	  TODO:
	  gaupol:
	  gaupol.desktop:
	  setup.cfg:
	  setup.py:
	  trantool:
	  Added from trunk.

2005-09-24  Osmo Salomaa  otsaloma@cc.hut.fi

	* data/glade/insertsub-dialog.glade: Changed "Add" button caption to
	  "Insert".

	* data/glade/prefs-dialog.glade: Minor fixes.

	* data/glade/spellcheck-dialog.glade: Corrected border width to 12
	  pixels.

	* data/icons/gaupol.png: New icon.

	* lib/gaupol/constants.py (EXTENSION): Removed class.
	  (FORMAT): Added attribute "EXTENSIONS".

	* lib/gaupol/gtk/actions/action.py (UndoableAction): New class.

	* lib/gaupol/gtk/dialogs/insertsub.py: Removed "Insert" button caption
	  changing, since it's now in the Glade file.

	* lib/gaupol/gtk/project.py (Project.select_rows, Project.set_focus):
	  New functions that could be implemented later.

2005-09-20  Osmo Salomaa  otsaloma@cc.hut.fi

	* lib/gaupol/gtk/dialogs/error.py:
	  lib/gaupol/gtk/dialogs/info.py:
	  lib/gaupol/gtk/dialogs/question.py:
	  lib/gaupol/gtk/dialogs/warning.py:
	  Minor fixes.
