@@ -197,7 +197,7 @@
 	      <child>
 		<widget class="GtkLabel" id="column_label">
 		  <property name="visible">True</property>
-		  <property name="label">&lt;b&gt;Sections&lt;/b&gt;</property>
+		  <property name="label">&lt;b&gt;Columns&lt;/b&gt;</property>
 		  <property name="use_underline">False</property>
 		  <property name="use_markup">True</property>
 		  <property name="justify">GTK_JUSTIFY_LEFT</property>
@@ -261,7 +261,7 @@
 			<widget class="GtkCheckButton" id="column_text_check_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Check _text section</property>
+			  <property name="label" translatable="yes">Check _text column</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
@@ -280,7 +280,7 @@
 			<widget class="GtkCheckButton" id="column_translation_check_button">
 			  <property name="visible">True</property>
 			  <property name="can_focus">True</property>
-			  <property name="label" translatable="yes">Check t_ranslation section</property>
+			  <property name="label" translatable="yes">Check t_ranslation column</property>
 			  <property name="use_underline">True</property>
 			  <property name="relief">GTK_RELIEF_NORMAL</property>
 			  <property name="focus_on_click">True</property>
