@@ -1,47 +1,4 @@
 <ui>
-	<menubar>
-		<menu action="edit">
-			<menuitem name="undo" action="undo_action"/>
-			<menuitem name="redo" action="redo_action"/>
-			<separator/>
-			<menuitem name="edit" action="edit_cell"/>
-			<separator/>
-			<menuitem name="cut"   action="cut_text"/>
-			<menuitem name="copy"  action="copy_text"/>
-			<menuitem name="paste" action="paste_text"/>
-			<menuitem name="clear" action="clear_text"/>
-			<separator/>
-			<menuitem name="insert" action="insert_subtitles"/>
-			<menuitem name="remove" action="remove_subtitles"/>
-			<separator/>
-			<menuitem name="select_all"       action="select_all"/>
-			<menuitem name="invert_selection" action="invert_selection"/>
-			<separator/>
-			<menuitem name="preferences" action="edit_preferences"/>
-		</menu>
-		<menu action="view">
-			<menuitem name="toolbar"   action="toggle_toolbar"/>
-			<menuitem name="statusbar" action="toggle_statusbar"/>
-			<separator/>
-			<menuitem name="times"  action="view_times"/>
-			<menuitem name="frames" action="view_frames"/>
-			<separator/>
-			<menu action="framerate">
-				<menuitem name="23_976" action="view_framerate_23_976"/>
-				<menuitem name="25"     action="view_framerate_25"/>
-				<menuitem name="29_97"  action="view_framerate_29_97"/>
-			</menu>
-			<separator/>
-			<menu action="columns">
-				<menuitem name="number"      action="toggle_number_column"/>
-				<menuitem name="show"        action="toggle_show_column"/>
-				<menuitem name="hide"        action="toggle_hide_column"/>
-				<menuitem name="duration"    action="toggle_duration_column"/>
-				<menuitem name="text"        action="toggle_text_column"/>
-				<menuitem name="translation" action="toggle_translation_column"/>
-			</menu>
-		</menu>
-	</menubar>
 	<popup action="columns">
 		<menuitem name="number"      action="toggle_number_column"/>
 		<menuitem name="show"        action="toggle_show_column"/>
